@@ -39,6 +39,6 @@ public class GeomLengthFunction extends AbstractFunction {
                     "Filter Function problem for function geomLength argument #0 - expected type Geometry");
         }
 
-        return new Double(StaticGeometry.geomLength(arg0));
+        return Double.valueOf(StaticGeometry.geomLength(arg0));
     }
 }
